2001-09-09  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* w3m-ucs.el (w3m-euc-japan-encoder): Fixed for katakana-jisx0201.

2001-09-10  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m-form.el (w3m-form-make-form-data): Call
	`w3m-arrived-auto-detected-coding-system' when
	`w3m-content-charset' returns nil.

	* w3m.el (w3m-arrived-p): Strict checking.
	(w3m-arrived-auto-detected-coding-system): New function.
	(w3m-arrived-set-auto-detected-coding-system): Ditto.
	(w3m-decode-buffer): Call
	`w3m-arrived-set-auto-detected-coding-system' to store the coding
	system detectd by this function.
	(w3m-w3m-attributes): Use content of w3m-document-charset: field
	as charset, only when `w3m-type' equals `w3mmee' or `w3m-m17n'.
	(w3m-redisplay-with-charset): Call
	`w3m-arrived-auto-detected-coding-system' to get current
	coding-system.

2001-09-09  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-use-mule-ucs): Strict checking.
	(w3m-euc-japan-decode): Use `write-multibyte-character' except
	Mule2 and XEmacs21.1.
	(w3m-find-file): Refer `coding-system-for-read' which is specified
	by `universal-coding-system-argument'.

	* w3m-xmas.el (w3m-euc-japan-decoder): Removed.

2001-09-09  MIYOSHI Masanori  <miyoshi@boreas.dti.ne.jp>

	* shimbun/sb-yahoo.el: Follow the renewal of the Web site.

	* README.shimbun.ja: Ditto.

	* shimbun/sb-nikkei.el (shimbun-nikkei-groups): Apply the patch
	posted by Takenobu Sugiyama <sugiyama@ae.advantest.co.jp> in
	[emacs-w3m 01452].

	* README.shimbun.ja: Ditto.

2001-09-07  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-use-mule-ucs): New user option.
	(w3m-input-coding-system): Changed default value.
	(w3m-async-exec): Ditto.
	(w3m-process-connection-type) [Solaris]: Changed default value.
	(w3m-entity-alist): Enlarge a regular expression.
	(w3m-ucs-to-char): New function.
	(w3m-euc-japan-encoder): Follow the change of `w3m-ucs.el'.

	* w3mhack.el (w3mhack-examine-modules): Handle `w3m-ucs.el'.

	* w3m-ucs.el: New file.
